--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -6,13 +6,10 @@
 }
 body {
   position: relative;
-  background: url(/img/bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
+  background-color: #edecec;
   width: 100%;
   min-height: 100%;
+  height: auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -38,11 +35,8 @@ body:after {
   background: rgba(255, 255, 255, 0.25);
   z-index: -1;
 }
-.nav,
-.pagination,
-.carousel,
-.pannel-title a {
-  cursor: pointer;
+body * {
+  outline: none;
 }
 .view {
   display: -webkit-box;
@@ -62,6 +56,18 @@ body:after {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+.nyt {
+  display: block;
+  margin: 0 auto;
+  zoom: 0.35;
+}
+.grid-960 {
+  width: 960px;
+  margin: 0 auto;
+}
+.pagination-md {
+  margin: 15px auto;
+}
 .loading-indicator {
   position: absolute;
   z-index: 10;
@@ -80,31 +86,9 @@ body:after {
   background: #03A9F4;
   z-index: 120;
 }
-h2,
-form {
-  margin: 20px auto;
-}
-.nyt {
-  display: block;
-  margin: 0 auto;
-  zoom: 0.35;
-}
-.grid-960 {
-  width: 960px;
-  margin: 0 auto;
-}
-.pagination-md {
-  margin: 15px auto;
-}
-.top-navbar {
-  width: 60%;
-  margin: 0 auto;
-}
-.top-navbar .nav a {
-  text-transform: uppercase;
-}
-.top-navbar .nav li + li {
-  margin: 5%;
+.card {
+  background: #ffffff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
 }
 .form__search {
   display: -webkit-box;
@@ -122,27 +106,26 @@ form {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.form__search .form__container {
   width: 100%;
 }
 .form__search input[type=search] {
-  width: 79%;
-}
-.form__search .form__search_label {
-  padding: 10px 10px;
-  border-radius: 5px;
-  background: #ffffff;
-  width: 100%;
-  background: rgba(112, 122, 122, 0.5);
+  width: 87.5%;
+  height: 50px;
+  font-size: 20px;
 }
 .form__search .btn-search {
-  margin-left: 1%;
+  margin-left: 2%;
+  margin-right: 0;
   padding: 4px 15px;
-  border-radius: 5px;
-  width: 19%;
-  font-size: 13pt;
-  -webkit-align-self: baseline;
-      -ms-flex-item-align: baseline;
-          align-self: baseline;
+  width: 10%;
+}
+.form__search md-input-container.md-has-icon {
+  padding-left: 0;
+}
+.form__search md-input-container.md-has-icon > label {
+  left: 0;
 }
 .btn_load {
   display: block;
