--- a/app/less/common.less
+++ b/app/less/common.less
@@ -80,3 +80,15 @@ body {
   background: #03A9F4;
   z-index: 120;
 }
+
+// header
+
+.nav-wrapper {
+
+  .brand-logo {
+    margin-left: 15px;
+    .logo {
+      zoom: 0.15;
+    }
+  }
+}
