--- a/app/less/home.less
+++ b/app/less/home.less
@@ -5,23 +5,28 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  //width: 100%;
+  padding: 15px;
+  margin-top: 20px;
 
-  .form__container {
+  .input-field {
     width: 100%;
   }
 
-  input[type=search] {
-    width: 87.5%;
-    height: 50px;
+  input[type=text] {
+    width: 86.5%;
+    //height: 50px;
     font-size: 20px;
+    text-indent: 12px;
   }
 
   .btn-search {
     margin-left: 2%;
     margin-right: 0;
-    padding: 4px 15px;
-    width: 10%;
+    width: 11%;
+
+    i {
+      font-size: 36px;
+    }
   }
 
   // change material css
@@ -39,13 +44,18 @@
   display: block;
   width: 100%;
   margin: 30px auto 15px;
-  font-size: 16pt;
+  line-height: 36px;
+
+  i {
+    font-size: 2.1rem;
+  }
 }
 
 .form__sections {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  padding: 15px;
 
   .form__checkbox {
     display: inline-block;
@@ -54,32 +64,42 @@
       display: none;
 
       &:checked + label {
-        background: #03A9F4;
+        color: #ffffff;
+        background: #00796b;
       }
     }
 
     label {
       display: inline-block;
-      margin: 3px 4px;
-      padding: 4px 12px;
-      border: 1px solid #03A9F4;
+      margin: 3px 2px;
       background: #ffffff;
-      border-radius: 4px;
       font-size: 13px;
+      color: rgba(0,0,0, .8);
       transition: all 0.3s ease;
 
+      &:before {
+        display: none;
+      }
+
       &:hover {
-        background: #03A9F4;
+        color: #ffffff;
+        background: #26a69a;
       }
     }
   }
 }
 
+.categories {
+  margin-top: 20px;
+}
+
 .results-length {
   width: 960px;
   margin: 12px auto;
+  padding: 12px 16px;
   text-align: right;
-  font: 600 13pt "Ubuntu";
+  font-weight: 300;
+  font-size: 15px;
   color: #696969;
 }
 
@@ -107,14 +127,15 @@
     //font: 400 12pt "Ubuntu";
     transition: all 0.3s ease;
 
-    &:hover {
 
-      like-icon {
-        display: block;
-        transition: all 0.25s ease;
-        cursor: pointer;
-      }
-    }
+    //&:hover {
+    //
+    //  like-icon {
+    //    display: block;
+    //    transition: all 0.25s ease;
+    //    cursor: pointer;
+    //  }
+    //}
 
     .article__heading, .byline, .update-date, .summary, .hashtag {
 
@@ -236,7 +257,7 @@ footer {
   font: 400 9pt "Ubuntu";
 
   .developer {
-    color: #FDF5E6;
+    color: #00796b;
     font-size: 1.1em;
   }
 }
