--- a/app/partials/create_article.tpl.html
+++ b/app/partials/create_article.tpl.html
@@ -2,8 +2,9 @@
     <div class="modal-header">
         <h3 class="modal-title">New Article</h3>
     </div>
-    <div class="modal-body">
+    <div class="modal-content">
         <form>
+
             <label>
                 Source (URL):
                 <input type="text" ng-model="newSource" />
